        on macOS 10.12
379748  Fix missing pselect syscall (OS X 10.11)
380397  s390x: __GI_strcspn() replacemenet needed
381162  possible array overrun in VEX register allocator
381272  ppc64 doesn't compile test_isa_2_06_partx.c without VSX support
381289  epoll_pwait can have a NULL sigmask
381274  powerpc too chatty even with --sigill-diagnostics=no
381553  VEX register allocator v3
381769  Use ucontext_t instead of struct ucontext
381805  arm32 needs ld.so index hardwire for new glibc security fixes
382256  gz compiler flag test doesn't work for gold
382407  vg_perf needs "--terse" command line option
382515  "Assertion 'di->have_dinfo' failed." on wine's dlls/mscoree/tests/mscoree.c
382563  MIPS MSA ASE support
382998  xml-socket doesn't work
383275  massif valgrind: m_xarray.c:162 (ensureSpaceXA): Assertion '!xa->arr' failed
383723  Fix missing kevent_qos syscall (macOS 10.11)
384096  Mention AddrCheck at Memcheck's command line option --undef-value-errors=no
384230  vex x86->IR: unhandled instruction bytes: 0x67 0xE8 0xAB 0x68
384526  reduce number of spill instructions generated by VEX register allocator v3
384584  Callee saved registers listed first for AMD64, X86, and PPC architectures
384633  Add a simple progress-reporting facility
384987  VEX register allocator: allocate caller-save registers for short lived vregs
385182  PPC64 is missing support for the DSCR
385207  PPC64, generate_store_FPRF() generates too many Iops
385208  PPC64, xxperm instruction exhausts temporary memory
385210  PPC64, vpermr instruction could exhaust temporary memory
385279  unhandled syscall: mach:43 (mach_generate_activity_id)
385183  PPC64, Add support for xscmpeqdp, xscmpgtdp, xscmpgedp, xsmincdp instructions
385334  PPC64, fix vpermr, xxperm, xxpermr mask value.
385868  glibc ld.so _dl_runtime_resolve_avx_slow conditional jump warning.
385912  none/tests/rlimit_nofile fails on newer glibc/kernel.
385939  Optionally exit on the first error